# news-summarizer-openai

./: .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
infra/: secrets.tf
migrations/2024-07-14-051843_source/: down.sql  up.sql
migrations/2024-07-14-051851_article/: up.sql
migrations/2024-08-04-060846_create_summary/: down.sql  up.sql
migrations/2024-08-06-060251_change_summary_date_to_date/: down.sql  up.sql
src/: main.rs  schema.rs
src/auth/: internal.rs  mod.rs
src/db_utils/: article.rs  establish_connection.rs  mod.rs  summary.rs
src/external_services/: mod.rs
src/external_services/nytimes/: fetcher.rs  mod.rs  schema.rs
src/external_services/openai/: mod.rs  summarizer.rs
src/handlers/: mod.rs  news.rs  summarize.rs  update_news_lib.rs
src/models/: article.rs  mod.rs  source.rs  summary.rs
src/utils/preprocess/: mod.rs  tokenizer.rs
