[package]
name = "news-summarizer-openai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.23.4"
dotenvy = "0.15.7"
openssl-sys = "0.9.102"
reqwest = "0.12.3"
rocket = "0.5.0"
serde = "1.0.198"
tiktoken-rs = "0.5.8"
diesel = { version = "2.2.0", features = ["postgres", "chrono", "serde_json"] }
newsdata-io-api = "0.9.1"
serde_json = "1.0.120"
chrono = "0.4.38"
